--- a/newstyle.html
+++ b/newstyle.html
@@ -95,7 +95,7 @@
     line-height: 0.9;
     letter-spacing: 2px;
     margin-bottom: auto;
-    text-shadow:
+    text-shadow: 
       0 0 30px rgba(0, 245, 196, 0.6),
       0 0 60px rgba(123, 47, 255, 0.4),
       3px 3px 0 rgba(255,60,110,0.4);
@@ -198,7 +198,7 @@
     padding-bottom: 56.25%;
     margin-bottom: 52px;
     border: 1px solid rgba(123, 47, 255, 0.3);
-    box-shadow:
+    box-shadow: 
       0 0 40px rgba(123, 47, 255, 0.2),
       inset 0 0 20px rgba(0,0,0,0.5);
   }
@@ -408,7 +408,7 @@
 
 <!-- LEFT PANEL -->
 <div class="left-panel">
-  <img src="assets/alienmoon2.jpg" alt="Alien Moon band" class="band-photo">
+  <img src="crazycow1.jpg" alt="Alien Moon band" class="band-photo">
   <div class="left-content">
     <div class="band-name">ALIEN<br>MOON</div>
     <div class="tagline">Psychedelic Rock · Dance · Netherlands</div>
@@ -436,11 +436,11 @@
 
   <!-- Video -->
   <div class="video-container">
-    <iframe
-      src="https://www.youtube.com/embed/I7-HTflT2RY"
+    <iframe 
+      src="https://www.youtube.com/embed/I7-HTflT2RY" 
       title="Alien Moon Live"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen>
     </iframe>
   </div>
@@ -493,16 +493,16 @@
   <!-- About -->
   <div class="section-title">ABOUT</div>
   <div class="about-text">
-    <em>Alien Moon</em> is a psychedelic rock band from the Netherlands built for one purpose:
-    getting people on the dance floor and keeping them there. Swirling guitars, hypnotic grooves,
-    and cosmic energy collide in a live experience that blurs the line between a rock concert
+    <em>Alien Moon</em> is a psychedelic rock band from the Netherlands built for one purpose: 
+    getting people on the dance floor and keeping them there. Swirling guitars, hypnotic grooves, 
+    and cosmic energy collide in a live experience that blurs the line between a rock concert 
     and a full-on dance party.
     <br><br>
-    Drawing from the rich tradition of late-60s and 70s psychedelia — think fuzz-soaked riffs,
-    expansive jams, and pulsing rhythm sections — Alien Moon crafts a sound that's <em>ancient and
+    Drawing from the rich tradition of late-60s and 70s psychedelia — think fuzz-soaked riffs, 
+    expansive jams, and pulsing rhythm sections — Alien Moon crafts a sound that's <em>ancient and 
     futuristic</em> at the same time. Every set is a trip. Come prepared to move.
     <br><br>
-    (Side note: catch the band's alter ego <em>Crazy Cow</em> for their Neil Young tribute shows —
+    (Side note: catch the band's alter ego <em>Crazy Cow</em> for their Neil Young tribute shows — 
     a completely different beast, equally worth your evening.)
   </div>
 
