--- a/index.html
+++ b/index.html
@@ -458,33 +458,9 @@
     </thead>
     <tbody>
       <tr>
-        <td class="date-cell">15 MAR 2026</td>
-        <td class="venue-cell">Paradiso</td>
+        <td class="date-cell">20 MAR 2026 &middot; 19:30</td>
+        <td class="venue-cell">Einde Van De Wereld<br><span style="font-size:11px;color:var(--muted);font-weight:normal">Javakade 61 &mdash; as Crazy Cow (Neil Young Tribute)</span></td>
         <td class="city-cell">Amsterdam</td>
-        <td><a href="#" class="ticket-btn">Tickets</a></td>
-      </tr>
-      <tr>
-        <td class="date-cell">22 MAR 2026</td>
-        <td class="venue-cell">De Effenaar</td>
-        <td class="city-cell">Eindhoven</td>
-        <td><a href="#" class="ticket-btn">Tickets</a></td>
-      </tr>
-      <tr>
-        <td class="date-cell">05 APR 2026</td>
-        <td class="venue-cell">013</td>
-        <td class="city-cell">Tilburg</td>
-        <td><a href="#" class="ticket-btn">Tickets</a></td>
-      </tr>
-      <tr>
-        <td class="date-cell">19 APR 2026</td>
-        <td class="venue-cell">Doornroosje</td>
-        <td class="city-cell">Nijmegen</td>
-        <td><a href="#" class="ticket-btn">Tickets</a></td>
-      </tr>
-      <tr>
-        <td class="date-cell">02 MAY 2026</td>
-        <td class="venue-cell">Volt</td>
-        <td class="city-cell">Maastricht</td>
         <td><a href="#" class="ticket-btn">Tickets</a></td>
       </tr>
     </tbody>
